@@ -14,6 +14,8 @@
 
 package com.google.devtools.build.buildjar.instrumentation;
 
+import static java.nio.file.StandardOpenOption.TRUNCATE_EXISTING;
+
 import com.google.common.io.MoreFiles;
 import com.google.common.io.RecursiveDeleteOption;
 import com.google.devtools.build.buildjar.InvalidCommandLineException;
@@ -27,7 +29,6 @@ import java.io.OutputStream;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.List;
@@ -39,32 +40,22 @@ public final class JacocoInstrumentationProcessor {
 
   public static JacocoInstrumentationProcessor create(List<String> args)
       throws InvalidCommandLineException {
+    // Ignore extra arguments for backwards compatibility (they used to contain filters).
     if (args.size() < 1) {
       throw new InvalidCommandLineException(
           "Number of arguments for Jacoco instrumentation should be 1+ (given "
               + args.size()
-              + ": metadataOutput [filters*].");
+              + ": pathsForCoverageFile");
     }
 
-    // ignoring filters, they weren't used in the previous implementation
-    // TODO(bazel-team): filters should be correctly handled
-    return new JacocoInstrumentationProcessor(args.get(0));
+    return new JacocoInstrumentationProcessor(args.getFirst());
   }
 
   private Path instrumentedClassesDirectory;
   private final String coverageInformation;
-  private final boolean isNewCoverageImplementation;
 
   private JacocoInstrumentationProcessor(String coverageInfo) {
     this.coverageInformation = coverageInfo;
-    // This is part of the new Java coverage implementation where JacocoInstrumentationProcessor
-    // receives a file that includes the relative paths of the uninstrumented Java files, instead
-    // of the metadata jar.
-    this.isNewCoverageImplementation = coverageInfo.endsWith(".txt");
-  }
-
-  public boolean isNewCoverageImplementation() {
-    return isNewCoverageImplementation;
   }
 
   /**
@@ -76,20 +67,11 @@ public final class JacocoInstrumentationProcessor {
     // multiple threads performing read/write/delete actions on the instrumented classes directory.
     instrumentedClassesDirectory = getMetadataDirRelativeToJar(build.getOutputJar());
     Files.createDirectories(instrumentedClassesDirectory);
-    if (jar == null) {
-      jar = new JarCreator(coverageInformation);
-    }
-    jar.setNormalize(true);
     jar.setCompression(build.compressJar());
     Instrumenter instr = new Instrumenter(new OfflineInstrumentationAccessGenerator());
     instrumentRecursively(instr, build.getClassDir());
     jar.addDirectory(instrumentedClassesDirectory);
-    if (isNewCoverageImplementation) {
-      jar.addEntry(coverageInformation, coverageInformation);
-    } else {
-      jar.execute();
-      cleanup();
-    }
+    jar.addEntry(coverageInformation, Path.of(coverageInformation));
   }
 
   public void cleanup() throws IOException {
@@ -121,23 +103,22 @@ public final class JacocoInstrumentationProcessor {
             // It's not clear whether there is any advantage in not instrumenting *Test classes,
             // apart from lowering the covered percentage in the aggregate statistics.
 
-            // We first move the original .class file to our metadata directory, then instrument it
-            // and output the instrumented version in the regular classes output directory.
+            // We first copy the original .class file to our metadata directory, then instrument it
+            // and rewrite the instrumented version back into the regular classes output directory.
+
+            // Not moving or unlinking the source .class file is essential to guarantee visiting
+            // it only once during recursive directory traversal while also mutating the directory.
             Path instrumentedCopy = file;
-            Path uninstrumentedCopy;
-            if (isNewCoverageImplementation) {
-              Path absoluteUninstrumentedCopy = Paths.get(file + ".uninstrumented");
-              uninstrumentedCopy =
-                  instrumentedClassesDirectory.resolve(root.relativize(absoluteUninstrumentedCopy));
-            } else {
-              uninstrumentedCopy = instrumentedClassesDirectory.resolve(root.relativize(file));
-            }
+            Path absoluteUninstrumentedCopy = Path.of(file + ".uninstrumented");
+            Path uninstrumentedCopy =
+                instrumentedClassesDirectory.resolve(root.relativize(absoluteUninstrumentedCopy));
             Files.createDirectories(uninstrumentedCopy.getParent());
-            Files.move(file, uninstrumentedCopy);
+            Files.copy(file, uninstrumentedCopy);
             try (InputStream input =
                     new BufferedInputStream(Files.newInputStream(uninstrumentedCopy));
                 OutputStream output =
-                    new BufferedOutputStream(Files.newOutputStream(instrumentedCopy))) {
+                    new BufferedOutputStream(
+                        Files.newOutputStream(instrumentedCopy, TRUNCATE_EXISTING))) {
               instr.instrument(input, output, file.toString());
             }
             return FileVisitResult.CONTINUE;
