@@ -18,6 +18,7 @@ import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.collect.ImmutableList.toImmutableList;
 
 import com.google.auth.Credentials;
+import com.google.common.base.CharMatcher;
 import com.google.common.base.MoreObjects;
 import com.google.common.base.Strings;
 import com.google.common.base.Throwables;
@@ -25,9 +26,10 @@ import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.devtools.build.lib.authandtls.StaticCredentials;
+import com.google.devtools.build.lib.bazel.repository.cache.DownloadCache;
+import com.google.devtools.build.lib.bazel.repository.cache.DownloadCache.KeyType;
+import com.google.devtools.build.lib.bazel.repository.cache.DownloadCacheHitEvent;
 import com.google.devtools.build.lib.bazel.repository.cache.RepositoryCache;
-import com.google.devtools.build.lib.bazel.repository.cache.RepositoryCache.KeyType;
-import com.google.devtools.build.lib.bazel.repository.cache.RepositoryCacheHitEvent;
 import com.google.devtools.build.lib.bazel.repository.downloader.UrlRewriter.RewrittenURL;
 import com.google.devtools.build.lib.events.Event;
 import com.google.devtools.build.lib.events.ExtendedEventHandler;
@@ -38,9 +40,9 @@ import com.google.devtools.build.lib.vfs.Path;
 import com.google.devtools.build.lib.vfs.PathFragment;
 import java.io.IOException;
 import java.io.InterruptedIOException;
+import java.net.SocketException;
 import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
+import java.net.UnknownHostException;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -58,11 +60,12 @@ import javax.annotation.Nullable;
  * to disk.
  */
 public class DownloadManager {
-  private final RepositoryCache repositoryCache;
+  private final DownloadCache downloadCache;
   private ImmutableList<Path> distdir = ImmutableList.of();
   private UrlRewriter rewriter;
   private final Downloader downloader;
   private final HttpDownloader bzlmodHttpDownloader;
+  private final ExtendedEventHandler eventHandler;
   private boolean disableDownload = false;
   private int retries = 0;
   @Nullable private Credentials netrcCreds;
@@ -82,10 +85,14 @@ public class DownloadManager {
    *     registry.
    */
   public DownloadManager(
-      RepositoryCache repositoryCache, Downloader downloader, HttpDownloader bzlmodHttpDownloader) {
-    this.repositoryCache = repositoryCache;
+      DownloadCache downloadCache,
+      Downloader downloader,
+      HttpDownloader bzlmodHttpDownloader,
+      ExtendedEventHandler eventHandler) {
+    this.downloadCache = downloadCache;
     this.downloader = downloader;
     this.bzlmodHttpDownloader = bzlmodHttpDownloader;
+    this.eventHandler = eventHandler;
   }
 
   public void setDistdir(List<Path> distdir) {
@@ -115,17 +122,17 @@ public class DownloadManager {
 
   public Future<Path> startDownload(
       ExecutorService executorService,
-      List<URL> originalUrls,
+      List<URI> originalUrls,
       Map<String, List<String>> headers,
       Map<URI, Map<String, List<String>>> authHeaders,
       Optional<Checksum> checksum,
       String canonicalId,
       Optional<String> type,
       Path output,
-      ExtendedEventHandler eventHandler,
       Map<String, String> clientEnv,
       String context,
-      Phaser downloadPhaser) {
+      Phaser downloadPhaser,
+      boolean mayHardlink) {
     return executorService.submit(
         () -> {
           if (downloadPhaser.register() != 0) {
@@ -141,9 +148,9 @@ public class DownloadManager {
                 canonicalId,
                 type,
                 output,
-                eventHandler,
                 clientEnv,
-                context);
+                context,
+                mayHardlink);
           } finally {
             downloadPhaser.arrive();
           }
@@ -172,24 +179,25 @@ public class DownloadManager {
    * @param checksum valid checksum which is checked, or absent to disable
    * @param type extension, e.g. "tar.gz" to force on downloaded filename, or empty to not do this
    * @param output destination filename if {@code type} is <i>absent</i>, otherwise output directory
-   * @param eventHandler CLI progress reporter
    * @param clientEnv environment variables in shell issuing this command
    * @param context the context in which the file was fetched; used only for reporting
+   * @param mayHardlink whether the output is known not to be modified after download and thus may
+   *     be created as a hardlink to the cache copy
    * @throws IllegalArgumentException on parameter badness, which should be checked beforehand
    * @throws IOException if download was attempted and ended up failing
    * @throws InterruptedException if this thread is being cast into oblivion
    */
   private Path downloadInExecutor(
-      List<URL> originalUrls,
+      List<URI> originalUrls,
       Map<String, List<String>> headers,
       Map<URI, Map<String, List<String>>> authHeaders,
       Optional<Checksum> checksum,
       String canonicalId,
       Optional<String> type,
       Path output,
-      ExtendedEventHandler eventHandler,
       Map<String, String> clientEnv,
-      String context)
+      String context,
+      boolean mayHardlink)
       throws IOException, InterruptedException {
     if (Thread.interrupted()) {
       throw new InterruptedException();
@@ -200,24 +208,24 @@ public class DownloadManager {
     //  by Starlark code -, or if a UrlRewriter is present. However, if it comes directly from a
     //  ctx.download{,_and_extract}, this not the case. Should be refactored to handle all .netrc
     //  parsing in one place, in Java code (similarly to #downloadAndReadOneUrl).
-    ImmutableList<URL> rewrittenUrls = ImmutableList.copyOf(originalUrls);
+    ImmutableList<URI> rewrittenUrls = ImmutableList.copyOf(originalUrls);
     Map<URI, Map<String, List<String>>> rewrittenAuthHeaders = authHeaders;
 
     if (rewriter != null) {
       ImmutableList<UrlRewriter.RewrittenURL> rewrittenUrlMappings = rewriter.amend(originalUrls);
       rewrittenUrls =
-          rewrittenUrlMappings.stream().map(url -> url.url()).collect(toImmutableList());
+          rewrittenUrlMappings.stream().map(RewrittenURL::url).collect(toImmutableList());
       rewrittenAuthHeaders =
           rewriter.updateAuthHeaders(rewrittenUrlMappings, authHeaders, netrcCreds);
     }
 
-    URL mainUrl; // The "main" URL for this request
+    URI mainUrl; // The "main" URL for this request
     // Used for reporting only and determining the file name only.
     if (rewrittenUrls.isEmpty()) {
       if (type.isPresent() && !Strings.isNullOrEmpty(type.get())) {
-        mainUrl = new URL("http://nonexistent.example.org/cacheprobe." + type.get());
+        mainUrl = URI.create("http://nonexistent.example.org/cacheprobe." + type.get());
       } else {
-        mainUrl = new URL("http://nonexistent.example.org/cacheprobe");
+        mainUrl = URI.create("http://nonexistent.example.org/cacheprobe");
       }
     } else {
       mainUrl = rewrittenUrls.get(0);
@@ -234,7 +242,7 @@ public class DownloadManager {
       try {
         eventHandler.post(
             new CacheProgress(mainUrl.toString(), "Checking in " + cacheKeyType + " cache"));
-        String currentChecksum = RepositoryCache.getChecksum(cacheKeyType, destination);
+        String currentChecksum = DownloadCache.getChecksum(cacheKeyType, destination);
         if (currentChecksum.equals(cacheKey)) {
           // No need to download.
           return destination;
@@ -245,15 +253,15 @@ public class DownloadManager {
         eventHandler.post(new CacheProgress(mainUrl.toString()));
       }
 
-      if (repositoryCache.isEnabled()) {
+      if (downloadCache.isEnabled()) {
         isCachingByProvidedChecksum = true;
 
         try {
           Path cachedDestination =
-              repositoryCache.get(cacheKey, destination, cacheKeyType, canonicalId);
+              downloadCache.get(cacheKey, destination, cacheKeyType, canonicalId, mayHardlink);
           if (cachedDestination != null) {
             // Cache hit!
-            eventHandler.post(new RepositoryCacheHitEvent(context, cacheKey, mainUrl));
+            eventHandler.post(new DownloadCacheHitEvent(context, cacheKey, mainUrl));
             return cachedDestination;
           }
         } catch (IOException e) {
@@ -286,7 +294,7 @@ public class DownloadManager {
               eventHandler.post(
                   new CacheProgress(
                       mainUrl.toString(), "Checking " + cacheKeyType + " of " + candidate));
-              match = RepositoryCache.getChecksum(cacheKeyType, candidate).equals(cacheKey);
+              match = DownloadCache.getChecksum(cacheKeyType, candidate).equals(cacheKey);
             } catch (IOException e) {
               // Not finding anything in a distdir is a normal case, so handle it absolutely
               // quietly. In fact, it is common to specify a whole list of dist dirs,
@@ -297,7 +305,7 @@ public class DownloadManager {
             if (match) {
               if (isCachingByProvidedChecksum) {
                 try {
-                  repositoryCache.put(cacheKey, candidate, cacheKeyType, canonicalId);
+                  downloadCache.put(cacheKey, candidate, cacheKeyType, canonicalId);
                 } catch (IOException e) {
                   eventHandler.handle(
                       Event.warn("Failed to copy " + candidate + " to repository cache: " + e));
@@ -331,7 +339,8 @@ public class DownloadManager {
             destination,
             eventHandler,
             clientEnv,
-            type);
+            type,
+            context);
         break;
       } catch (InterruptedIOException e) {
         throw new InterruptedException(e.getMessage());
@@ -343,10 +352,10 @@ public class DownloadManager {
     }
 
     if (isCachingByProvidedChecksum) {
-      repositoryCache.put(
+      downloadCache.put(
           checksum.get().toString(), destination, checksum.get().getKeyType(), canonicalId);
-    } else if (repositoryCache.isEnabled()) {
-      repositoryCache.put(destination, KeyType.SHA256, canonicalId);
+    } else if (downloadCache.isEnabled()) {
+      var unused = downloadCache.put(destination, KeyType.SHA256, canonicalId);
     }
 
     return destination;
@@ -357,17 +366,23 @@ public class DownloadManager {
       return false;
     }
 
-    if (e instanceof ContentLengthMismatchException) {
+    if (isRetryableException(e)) {
       return true;
     }
 
     for (var suppressed : e.getSuppressed()) {
-      if (suppressed instanceof ContentLengthMismatchException) {
+      if (isRetryableException(suppressed)) {
         return true;
       }
     }
 
     return false;
+  }
+
+  private boolean isRetryableException(Throwable e) {
+    return e instanceof ContentLengthMismatchException
+        || e instanceof SocketException
+        || e instanceof UnknownHostException;
   }
 
   /**
@@ -381,7 +396,6 @@ public class DownloadManager {
    * the cache prior to returning the value.
    *
    * @param originalUrl the original URL of the file
-   * @param eventHandler CLI progress reporter
    * @param clientEnv environment variables in shell issuing this command
    * @param checksum checksum of the file used to verify the content and obtain repository cache
    *     hits
@@ -390,23 +404,20 @@ public class DownloadManager {
    * @throws InterruptedException if this thread is being cast into oblivion
    */
   public byte[] downloadAndReadOneUrlForBzlmod(
-      URL originalUrl,
-      ExtendedEventHandler eventHandler,
-      Map<String, String> clientEnv,
-      Optional<Checksum> checksum)
+      URI originalUrl, Map<String, String> clientEnv, Optional<Checksum> checksum)
       throws IOException, InterruptedException {
     if (Thread.interrupted()) {
       throw new InterruptedException();
     }
 
-    if (repositoryCache.isEnabled() && checksum.isPresent()) {
+    if (downloadCache.isEnabled() && checksum.isPresent()) {
       String cacheKey = checksum.get().toString();
       try {
-        byte[] content = repositoryCache.getBytes(cacheKey, checksum.get().getKeyType());
+        byte[] content = downloadCache.getBytes(cacheKey, checksum.get().getKeyType());
         if (content != null) {
           // Cache hit!
           eventHandler.post(
-              new RepositoryCacheHitEvent("Bazel module fetching", cacheKey, originalUrl));
+              new DownloadCacheHitEvent("Bazel module fetching", cacheKey, originalUrl));
           return content;
         }
       } catch (IOException e) {
@@ -415,19 +426,19 @@ public class DownloadManager {
     }
 
     Map<URI, Map<String, List<String>>> authHeaders = ImmutableMap.of();
-    ImmutableList<URL> rewrittenUrls = ImmutableList.of(originalUrl);
+    ImmutableList<URI> rewrittenUrls = ImmutableList.of(originalUrl);
 
     if (netrcCreds != null) {
       try {
-        Map<String, List<String>> metadata = netrcCreds.getRequestMetadata(originalUrl.toURI());
+        Map<String, List<String>> metadata = netrcCreds.getRequestMetadata(originalUrl);
         if (!metadata.isEmpty()) {
           Entry<String, List<String>> headers = metadata.entrySet().iterator().next();
           authHeaders =
               ImmutableMap.of(
-                  originalUrl.toURI(),
+                  originalUrl,
                   ImmutableMap.of(headers.getKey(), ImmutableList.of(headers.getValue().get(0))));
         }
-      } catch (URISyntaxException e) {
+      } catch (IOException e) {
         // If the credentials extraction failed, we're letting bazel try without credentials.
       }
     }
@@ -467,18 +478,18 @@ public class DownloadManager {
       throw new IllegalStateException("Unexpected error: file should have been downloaded.");
     }
 
-    if (repositoryCache.isEnabled()) {
+    if (downloadCache.isEnabled()) {
       if (checksum.isPresent()) {
-        repositoryCache.put(checksum.get().toString(), content, checksum.get().getKeyType());
+        downloadCache.put(checksum.get().toString(), content, checksum.get().getKeyType());
       } else {
-        repositoryCache.put(content, KeyType.SHA256);
+        downloadCache.put(content, KeyType.SHA256);
       }
     }
     return content;
   }
 
   @Nullable
-  private String getRewriterBlockedAllUrlsMessage(List<URL> originalUrls) {
+  private String getRewriterBlockedAllUrlsMessage(List<URI> originalUrls) {
     if (rewriter == null) {
       return null;
     }
@@ -491,7 +502,16 @@ public class DownloadManager {
     return message.toString();
   }
 
-  private Path getDownloadDestination(URL url, Optional<String> type, Path output) {
+  // The complement of a conservative range of characters that are valid for all reasonable file
+  // systems.
+  private static final CharMatcher FS_UNSAFE_CHARS =
+      CharMatcher.inRange('a', 'z')
+          .or(CharMatcher.inRange('A', 'Z'))
+          .or(CharMatcher.inRange('0', '9'))
+          .or(CharMatcher.anyOf(".-_"))
+          .negate();
+
+  private Path getDownloadDestination(URI url, Optional<String> type, Path output) {
     if (!type.isPresent()) {
       return output;
     }
@@ -504,7 +524,9 @@ public class DownloadManager {
         basename += suffix;
       }
     }
-    return output.getRelative(basename);
+    // The basename may contain characters that aren't legal in a path with all file systems. Those
+    // characters won't matter for type determination.
+    return output.getRelative(FS_UNSAFE_CHARS.replaceFrom(basename, '_'));
   }
 
   /**
@@ -512,7 +534,7 @@ public class DownloadManager {
    * specified that is unrelated to the primary URL. This happens, e.g., when the paramter output is
    * specified in ctx.download.
    */
-  private static ImmutableSet<String> getCandidateFileNames(URL url, Path destination) {
+  private static ImmutableSet<String> getCandidateFileNames(URI url, Path destination) {
     String urlBaseName = PathFragment.create(url.getPath()).getBaseName();
     if (!Strings.isNullOrEmpty(urlBaseName) && !urlBaseName.equals(destination.getBaseName())) {
       return ImmutableSet.of(urlBaseName, destination.getBaseName());
