@@ -13,7 +13,9 @@
 // limitations under the License.
 package com.google.devtools.build.lib.runtime.commands;
 
+import static com.google.common.collect.ImmutableList.toImmutableList;
 import static com.google.devtools.build.lib.runtime.Command.BuildPhase.NONE;
+import static java.nio.charset.StandardCharsets.ISO_8859_1;
 
 import com.google.common.base.Ascii;
 import com.google.common.base.CaseFormat;
@@ -30,14 +32,15 @@ import com.google.devtools.build.lib.analysis.BlazeVersionInfo;
 import com.google.devtools.build.lib.analysis.ConfiguredRuleClassProvider;
 import com.google.devtools.build.lib.analysis.NoBuildEvent;
 import com.google.devtools.build.lib.events.Event;
+import com.google.devtools.build.lib.events.Reporter;
 import com.google.devtools.build.lib.runtime.BlazeCommand;
 import com.google.devtools.build.lib.runtime.BlazeCommandResult;
 import com.google.devtools.build.lib.runtime.BlazeCommandUtils;
-import com.google.devtools.build.lib.runtime.BlazeModule;
 import com.google.devtools.build.lib.runtime.BlazeRuntime;
 import com.google.devtools.build.lib.runtime.Command;
 import com.google.devtools.build.lib.runtime.CommandEnvironment;
 import com.google.devtools.build.lib.runtime.InfoItem;
+import com.google.devtools.build.lib.runtime.OptionsSupplier;
 import com.google.devtools.build.lib.runtime.commands.proto.BazelFlagsProto;
 import com.google.devtools.build.lib.server.FailureDetails;
 import com.google.devtools.build.lib.server.FailureDetails.FailureDetail;
@@ -45,7 +48,10 @@ import com.google.devtools.build.lib.server.FailureDetails.HelpCommand.Code;
 import com.google.devtools.build.lib.util.StringUtil;
 import com.google.devtools.build.lib.util.StringUtilities;
 import com.google.devtools.build.lib.util.io.OutErr;
+import com.google.devtools.common.options.Converter;
 import com.google.devtools.common.options.Converters;
+import com.google.devtools.common.options.EnumConverter;
+import com.google.devtools.common.options.HtmlUtils;
 import com.google.devtools.common.options.Option;
 import com.google.devtools.common.options.OptionDefinition;
 import com.google.devtools.common.options.OptionDocumentationCategory;
@@ -57,6 +63,7 @@ import com.google.devtools.common.options.OptionsParser;
 import com.google.devtools.common.options.OptionsParser.HelpVerbosity;
 import com.google.devtools.common.options.OptionsParsingResult;
 import com.google.errorprone.annotations.CanIgnoreReturnValue;
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Base64;
@@ -69,7 +76,7 @@ import java.util.Set;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
+import javax.annotation.Nullable;
 
 /** The 'blaze help' command, which prints all available commands as well as specific help pages. */
 @Command(
@@ -133,37 +140,48 @@ public final class HelpCommand implements BlazeCommand {
       emitGenericHelp(outErr, runtime);
       return BlazeCommandResult.success();
     }
+    if (options.getResidue().getFirst().equals("completion")) {
+      if (options.getResidue().size() > 2) {
+        String message = "The completion command takes at most one argument";
+        env.getReporter().handle(Event.error(message));
+        return createFailureResult(message, Code.MISSING_ARGUMENT);
+      }
+      String shell = options.getResidue().size() > 1 ? options.getResidue().get(1) : null;
+      return emitCompletionHelp(shell, runtime, env.getReporter());
+    }
     if (options.getResidue().size() != 1) {
       String message = "You must specify exactly one command";
       env.getReporter().handle(Event.error(message));
       return createFailureResult(message, Code.MISSING_ARGUMENT);
     }
-    String helpSubject = options.getResidue().get(0);
+    String helpSubject = options.getResidue().getFirst();
     String productName = runtime.getProductName();
     // Go through the custom subjects before going through Bazel commands.
     switch (helpSubject) {
-      case "startup_options":
+      case "startup_options" -> {
         emitBlazeVersionInfo(outErr, runtime.getProductName());
         emitStartupOptions(outErr, helpOptions.helpVerbosity, runtime);
         return BlazeCommandResult.success();
-      case "target-syntax":
+      }
+      case "target-syntax" -> {
         emitBlazeVersionInfo(outErr, runtime.getProductName());
         emitTargetSyntaxHelp(outErr, productName);
 
         return BlazeCommandResult.success();
-      case "info-keys":
+      }
+      case "info-keys" -> {
         emitInfoKeysHelp(env, outErr);
         return BlazeCommandResult.success();
-      case "completion":
-        emitCompletionHelp(runtime, outErr);
-        return BlazeCommandResult.success();
-      case "flags-as-proto":
+      }
+      case "flags-as-proto" -> {
         emitFlagsAsProtoHelp(runtime, outErr);
         return BlazeCommandResult.success();
-      case "everything-as-html":
+      }
+      case "everything-as-html" -> {
         new HtmlEmitter(runtime).emit(outErr);
         return BlazeCommandResult.success();
-      default: // fall out
+      }
+      default -> {}
     }
 
     BlazeCommand command = runtime.getCommandMap().get(helpSubject);
@@ -177,7 +195,7 @@ public final class HelpCommand implements BlazeCommand {
         BlazeCommandUtils.getUsage(
             command.getClass(),
             helpOptions.helpVerbosity,
-            runtime.getBlazeModules(),
+            runtime.getOptionsSuppliers(),
             runtime.getRuleClassProvider(),
             productName));
 
@@ -186,8 +204,8 @@ public final class HelpCommand implements BlazeCommand {
 
   private static void emitBlazeVersionInfo(OutErr outErr, String productName) {
     String releaseInfo = BlazeVersionInfo.instance().getReleaseName();
-    String line = String.format("[%s %s]", productName, releaseInfo);
-    outErr.printOut(String.format("%80s\n", line));
+    String line = "[%s %s]".formatted(productName, releaseInfo);
+    outErr.printOut("%80s\n".formatted(line));
   }
 
   private void emitStartupOptions(
@@ -197,12 +215,52 @@ public final class HelpCommand implements BlazeCommand {
             "startup_options",
             "resource:startup_options.txt",
             getClass(),
-            BlazeCommandUtils.getStartupOptions(runtime.getBlazeModules()),
+            BlazeCommandUtils.getStartupOptions(runtime.getOptionsSuppliers()),
             helpVerbosity,
             runtime.getProductName()));
   }
 
-  private static void emitCompletionHelp(BlazeRuntime runtime, OutErr outErr) {
+  private static BlazeCommandResult emitCompletionHelp(
+      @Nullable String shell, BlazeRuntime runtime, Reporter reporter) {
+    OutErr outErr = reporter.getOutErr();
+    return switch (shell) {
+      case "bash" -> {
+        outErr.printOutLn(loadCompletionScript("bazel-complete-header.bash"));
+        emitCompletionVariables(runtime, outErr);
+        outErr.printOutLn(loadCompletionScript("bazel-complete-template.bash"));
+        yield BlazeCommandResult.success();
+      }
+      case null -> {
+        // Preserved for backwards compatibility: print only the variables part of the bash
+        // completion script.
+        emitCompletionVariables(runtime, outErr);
+        yield BlazeCommandResult.success();
+      }
+      default -> {
+        String message =
+            "The completion command only supports 'bash' as an argument, got '%s'".formatted(shell);
+        reporter.handle(Event.error(message));
+        yield createFailureResult(message, Code.MISSING_ARGUMENT);
+      }
+    };
+  }
+
+  private static String loadCompletionScript(String basename) {
+    try {
+      String resourceName = "/scripts/" + basename;
+      try (var stream = HelpCommand.class.getResourceAsStream(resourceName)) {
+        if (stream == null) {
+          throw new IOException(resourceName + " not found.");
+        }
+        return new String(stream.readAllBytes(), ISO_8859_1);
+      }
+    } catch (IOException e) {
+      throw new IllegalStateException(
+          "Failed to read built-in resource %s: %s".formatted(basename, e.getMessage()), e);
+    }
+  }
+
+  private static void emitCompletionVariables(BlazeRuntime runtime, OutErr outErr) {
     Map<String, BlazeCommand> commandsByName = getSortedCommands(runtime);
 
     outErr.printOutLn("BAZEL_COMMAND_LIST=\"" + SPACE_JOINER.join(commandsByName.keySet()) + "\"");
@@ -241,7 +299,7 @@ public final class HelpCommand implements BlazeCommand {
   private static void emitFlagsAsProtoHelp(BlazeRuntime runtime, OutErr outErr) {
     Map<String, BazelFlagsProto.FlagInfo.Builder> flags = new HashMap<>();
 
-    Predicate<OptionDefinition> allOptions = option -> true;
+    Predicate<OptionDefinition> allOptions = unused -> true;
     BiConsumer<String, OptionDefinition> visitor =
         (commandName, option) -> {
           if (ImmutableSet.copyOf(option.getOptionMetadataTags())
@@ -249,13 +307,13 @@ public final class HelpCommand implements BlazeCommand {
             return;
           }
           BazelFlagsProto.FlagInfo.Builder info =
-              flags.computeIfAbsent(option.getOptionName(), key -> createFlagInfo(option));
+              flags.computeIfAbsent(option.getOptionName(), unused -> createFlagInfo(option));
           info.addCommands(commandName);
         };
     Consumer<OptionsParser> startupOptionVisitor =
         parser -> parser.visitOptions(allOptions, option -> visitor.accept("startup", option));
     CommandOptionVisitor commandOptionVisitor =
-        (commandName, commandAnnotation, parser) ->
+        (commandName, unused, parser) ->
             parser.visitOptions(allOptions, option -> visitor.accept(commandName, option));
 
     visitAllOptions(runtime, startupOptionVisitor, commandOptionVisitor);
@@ -271,30 +329,57 @@ public final class HelpCommand implements BlazeCommand {
   private static BazelFlagsProto.FlagInfo.Builder createFlagInfo(OptionDefinition option) {
     BazelFlagsProto.FlagInfo.Builder flagBuilder = BazelFlagsProto.FlagInfo.newBuilder();
     flagBuilder.setName(option.getOptionName());
-    flagBuilder.setHasNegativeFlag(option.hasNegativeOption());
+    flagBuilder.setHasNegativeFlag(option.usesBooleanValueSyntax());
     flagBuilder.setDocumentation(option.getHelpText());
     flagBuilder.setAllowsMultiple(option.allowsMultiple());
     flagBuilder.setRequiresValue(option.requiresValue());
 
+    if (option.getAbbreviation() != '\0') {
+      flagBuilder.setAbbreviation(String.valueOf(option.getAbbreviation()));
+    }
+    if (!option.getOldOptionName().isEmpty()) {
+      flagBuilder.setOldName(option.getOldOptionName());
+    }
+
     List<String> optionEffectTags =
-        Arrays.stream(option.getOptionEffectTags())
-            .map(Enum::toString)
-            .collect(Collectors.toList());
+        Arrays.stream(option.getOptionEffectTags()).map(Enum::toString).toList();
     flagBuilder.addAllEffectTags(optionEffectTags);
 
     List<String> optionMetadataTags =
-        Arrays.stream(option.getOptionMetadataTags())
-            .map(Enum::toString)
-            .collect(Collectors.toList());
+        Arrays.stream(option.getOptionMetadataTags()).map(Enum::toString).toList();
     flagBuilder.addAllMetadataTags(optionMetadataTags);
 
     if (option.getDocumentationCategory() != null) {
       flagBuilder.setDocumentationCategory(option.getDocumentationCategory().toString());
     }
 
-    if (option.getAbbreviation() != '\0') {
-      flagBuilder.setAbbreviation(String.valueOf(option.getAbbreviation()));
+    if (!option.isSpecialNullDefault()) {
+      flagBuilder.setDefaultValue(option.getUnparsedDefaultValue());
     }
+
+    if (!option.getDeprecationWarning().isEmpty()) {
+      flagBuilder.setDeprecationWarning(option.getDeprecationWarning());
+    }
+
+    if (option.getOptionExpansion().length > 0) {
+      flagBuilder.addAllOptionExpansions(ImmutableList.copyOf(option.getOptionExpansion()));
+    }
+
+    Converter<?> converter = option.getConverter();
+    String converterClassName = converter.getClass().getSimpleName();
+    if (converterClassName.endsWith("Converter")) {
+      String shortName =
+          converterClassName.substring(0, converterClassName.length() - "Converter".length());
+      flagBuilder.setTypeConverter(shortName);
+    }
+    if (converter instanceof EnumConverter<?> enumConverter) {
+      List<String> enumValues =
+          Arrays.stream(enumConverter.getEnumType().getEnumConstants())
+              .map(Object::toString)
+              .collect(toImmutableList());
+      flagBuilder.addAllEnumValues(enumValues);
+    }
+
     return flagBuilder;
   }
 
@@ -303,18 +388,19 @@ public final class HelpCommand implements BlazeCommand {
       Consumer<OptionsParser> startupOptionVisitor,
       CommandOptionVisitor commandOptionVisitor) {
     // First startup_options
-    Iterable<BlazeModule> blazeModules = runtime.getBlazeModules();
+    Iterable<OptionsSupplier> optionsSuppliers = runtime.getOptionsSuppliers();
     ConfiguredRuleClassProvider ruleClassProvider = runtime.getRuleClassProvider();
     Map<String, BlazeCommand> commandsByName = getSortedCommands(runtime);
 
     Iterable<Class<? extends OptionsBase>> options =
-        BlazeCommandUtils.getStartupOptions(blazeModules);
+        BlazeCommandUtils.getStartupOptions(optionsSuppliers);
     startupOptionVisitor.accept(OptionsParser.builder().optionsClasses(options).build());
 
     for (Map.Entry<String, BlazeCommand> e : commandsByName.entrySet()) {
       BlazeCommand command = e.getValue();
       Command annotation = command.getClass().getAnnotation(Command.class);
-      options = BlazeCommandUtils.getOptions(command.getClass(), blazeModules, ruleClassProvider);
+      options =
+          BlazeCommandUtils.getOptions(command.getClass(), optionsSuppliers, ruleClassProvider);
       commandOptionVisitor.visit(
           e.getKey(), annotation, OptionsParser.builder().optionsClasses(options).build());
     }
@@ -338,21 +424,17 @@ public final class HelpCommand implements BlazeCommand {
   private static void emitInfoKeysHelp(CommandEnvironment env, OutErr outErr) {
     for (InfoItem item :
         InfoCommand.getInfoItemMap(env, OptionsParser.builder().build()).values()) {
-      outErr.printOut(String.format("%-23s %s\n", item.getName(), item.getDescription()));
+      outErr.printOut("%-23s %s\n".formatted(item.getName(), item.getDescription()));
     }
   }
 
   private static void emitGenericHelp(OutErr outErr, BlazeRuntime runtime) {
-    outErr.printOut(
-        String.format("Usage: %s <command> <options> ...\n\n", runtime.getProductName()));
+    outErr.printOut("Usage: %s <command> <options> ...\n\n".formatted(runtime.getProductName()));
     outErr.printOut("Available commands:\n");
 
-    Map<String, BlazeCommand> commandsByName = runtime.getCommandMap();
-    List<String> namesInOrder = new ArrayList<>(commandsByName.keySet());
-    Collections.sort(namesInOrder);
-
-    for (String name : namesInOrder) {
-      BlazeCommand command = commandsByName.get(name);
+    for (Map.Entry<String, BlazeCommand> entry : getSortedCommands(runtime).entrySet()) {
+      String name = entry.getKey();
+      BlazeCommand command = entry.getValue();
       Command annotation = command.getClass().getAnnotation(Command.class);
       if (annotation.hidden()) {
         continue;
@@ -360,21 +442,23 @@ public final class HelpCommand implements BlazeCommand {
 
       String shortDescription =
           annotation.shortDescription().replace("%{product}", runtime.getProductName());
-      outErr.printOut(String.format("  %-19s %s\n", name, shortDescription));
+      outErr.printOut("  %-19s %s\n".formatted(name, shortDescription));
     }
 
-    outErr.printOut("\n");
-    outErr.printOut("Getting more help:\n");
-    outErr.printOut(String.format("  %s help <command>\n", runtime.getProductName()));
-    outErr.printOut("                   Prints help and options for <command>.\n");
-    outErr.printOut(String.format("  %s help startup_options\n", runtime.getProductName()));
     outErr.printOut(
-        String.format(
-            "                   Options for the JVM hosting %s.\n", runtime.getProductName()));
-    outErr.printOut(String.format("  %s help target-syntax\n", runtime.getProductName()));
-    outErr.printOut("                   Explains the syntax for specifying targets.\n");
-    outErr.printOut(String.format("  %s help info-keys\n", runtime.getProductName()));
-    outErr.printOut("                   Displays a list of keys used by the info command.\n");
+        """
+
+        Getting more help:
+          %1$s help <command>
+                           Prints help and options for <command>.
+          %1$s help startup_options
+                           Options for the JVM hosting %1$s.
+          %1$s help target-syntax
+                           Explains the syntax for specifying targets.
+          %1$s help info-keys
+                           Displays a list of keys used by the info command.
+        """
+            .formatted(runtime.getProductName()));
   }
 
   private static final class HtmlEmitter {
@@ -409,11 +493,19 @@ public final class HelpCommand implements BlazeCommand {
       result.append("\n");
 
       result.append("<h2>Startup Options</h2>\n");
-      appendOptionsHtml(result, BlazeCommandUtils.getStartupOptions(runtime.getBlazeModules()));
+      appendOptionsHtml(
+          result,
+          BlazeCommandUtils.getStartupOptions(runtime.getOptionsSuppliers()),
+          ImmutableList.of(),
+          "startup_options");
       result.append("\n");
 
       result.append("<h2><a name=\"common_options\">Options Common to all Commands</a></h2>\n");
-      appendOptionsHtml(result, BlazeCommandUtils.getCommonOptions(runtime.getBlazeModules()));
+      appendOptionsHtml(
+          result,
+          BlazeCommandUtils.getCommonOptions(runtime.getOptionsSuppliers()),
+          ImmutableList.of(),
+          "common_options");
       result.append("\n");
 
       for (Map.Entry<String, BlazeCommand> e : commandsByName.entrySet()) {
@@ -438,10 +530,11 @@ public final class HelpCommand implements BlazeCommand {
         }
         Set<Class<? extends OptionsBase>> options = new HashSet<>();
         Collections.addAll(options, annotation.options());
-        for (BlazeModule blazeModule : runtime.getBlazeModules()) {
-          Iterables.addAll(options, blazeModule.getCommandOptions(annotation));
+        for (OptionsSupplier supplier : runtime.getOptionsSuppliers()) {
+          Iterables.addAll(options, supplier.getCommandOptions(annotation.name()));
         }
-        List<String> optionsToIgnore = appendOptionsHtml(result, options);
+        List<String> optionsToIgnore =
+            appendOptionsHtml(result, options, ImmutableList.of(), e.getKey());
         result.append("\n");
 
         // For now, we print all the configuration options in a list after all the non-configuration
@@ -450,7 +543,7 @@ public final class HelpCommand implements BlazeCommand {
           options.clear();
           Collections.addAll(options, annotation.options());
           options.addAll(runtime.getRuleClassProvider().getFragmentRegistry().getOptionsClasses());
-          appendOptionsHtml(result, options, optionsToIgnore);
+          appendOptionsHtml(result, options, optionsToIgnore, null);
           result.append("\n");
         }
       }
@@ -500,21 +593,14 @@ public final class HelpCommand implements BlazeCommand {
     // Returns the list of appended option names.
     @CanIgnoreReturnValue
     private List<String> appendOptionsHtml(
-        StringBuilder result, Iterable<Class<? extends OptionsBase>> optionsClasses) {
-      return appendOptionsHtml(result, optionsClasses, ImmutableList.of());
-    }
-
-    // Returns the list of appended option names.
-    @CanIgnoreReturnValue
-    private List<String> appendOptionsHtml(
         StringBuilder result,
         Iterable<Class<? extends OptionsBase>> optionsClasses,
-        List<String> optionsToIgnore) {
+        List<String> optionsToIgnore,
+        @Nullable String commandName) {
       OptionsParser parser = OptionsParser.builder().optionsClasses(optionsClasses).build();
       String productName = runtime.getProductName();
       result.append(
-          parser
-              .describeOptionsHtml(HTML_ESCAPER, productName, optionsToIgnore)
+          HtmlUtils.describeOptionsHtml(parser, HTML_ESCAPER, optionsToIgnore, commandName)
               .replace("%{product}", productName));
 
       List<String> optionNames = new ArrayList<>();
@@ -525,7 +611,6 @@ public final class HelpCommand implements BlazeCommand {
       }
       return optionNames;
     }
-
   }
 
   /** A visitor for Blaze commands and their respective command line options. */
