@@ -16,7 +16,7 @@ package com.google.devtools.build.lib.bazel.repository.downloader;
 import static com.google.common.collect.ImmutableList.toImmutableList;
 import static com.google.common.truth.Truth.assertThat;
 import static java.nio.charset.StandardCharsets.ISO_8859_1;
-import static java.nio.charset.StandardCharsets.UTF_8;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.fail;
 
 import com.google.auth.Credentials;
@@ -30,9 +30,9 @@ import com.google.devtools.build.lib.vfs.FileSystem;
 import com.google.devtools.build.lib.vfs.Path;
 import com.google.devtools.build.lib.vfs.inmemoryfs.InMemoryFileSystem;
 import java.io.IOException;
+import java.io.Reader;
 import java.io.StringReader;
 import java.net.URI;
-import java.net.URL;
 import java.util.Base64;
 import java.util.List;
 import java.util.Map;
@@ -45,43 +45,64 @@ import org.junit.runners.JUnit4;
 @RunWith(JUnit4.class)
 public class UrlRewriterTest {
 
+  /** Convenience wrapper to create a {@link UrlRewriter} with a single path/reader. */
+  private UrlRewriter testUrlRewriter(String filePathForErrorReporting, Reader reader)
+      throws UrlRewriterParseException {
+    return new UrlRewriter(ImmutableList.of(filePathForErrorReporting), ImmutableList.of(reader));
+  }
+
   @Test
   public void byDefaultTheUrlRewriterDoesNothing() throws Exception {
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(""));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(""));
 
-    List<URL> urls = ImmutableList.of(new URL("http://example.com"));
-    ImmutableList<URL> amended =
+    ImmutableList<URI> urls = ImmutableList.of(URI.create("http://example.com"));
+    ImmutableList<URI> amended =
         munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
 
     assertThat(amended).isEqualTo(urls);
   }
 
   @Test
+  public void constructorMustHaveTheSameNumberOfFilePathsAndReaders()
+      throws UrlRewriterParseException {
+    // This has one file path and one reader - no exception is thrown.
+
+    // Two file paths, but one reader - this will fail the precondition.
+    assertThrows(
+        "filePath and readers size must be equal",
+        IllegalArgumentException.class,
+        () ->
+            new UrlRewriter(
+                ImmutableList.of("/dev/null", "/dev/null"),
+                ImmutableList.of(new StringReader(""))));
+  }
+
+  @Test
   public void shouldBeAbleToBlockParticularHostsRegardlessOfScheme() throws Exception {
     String config = "block example.com";
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> urls =
+    ImmutableList<URI> urls =
         ImmutableList.of(
-            new URL("http://example.com"),
-            new URL("https://example.com"),
-            new URL("http://localhost"));
-    ImmutableList<URL> amended =
+            URI.create("http://example.com"),
+            URI.create("https://example.com"),
+            URI.create("http://localhost"));
+    ImmutableList<URI> amended =
         munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("http://localhost"));
+    assertThat(amended).containsExactly(URI.create("http://localhost"));
   }
 
   @Test
   public void shouldAllowAUrlToBeRewritten() throws Exception {
     String config = "rewrite example.com/foo/(.*) mycorp.com/$1/foo";
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> urls = ImmutableList.of(new URL("https://example.com/foo/bar"));
-    ImmutableList<URL> amended =
+    ImmutableList<URI> urls = ImmutableList.of(URI.create("https://example.com/foo/bar"));
+    ImmutableList<URI> amended =
         munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://mycorp.com/bar/foo"));
+    assertThat(amended).containsExactly(URI.create("https://mycorp.com/bar/foo"));
   }
 
   @Test
@@ -89,34 +110,54 @@ public class UrlRewriterTest {
     String config =
         "rewrite example.com/foo/(.*) mycorp.com/$1/somewhere\n"
             + "rewrite example.com/foo/(.*) mycorp.com/$1/elsewhere";
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> urls = ImmutableList.of(new URL("https://example.com/foo/bar"));
-    ImmutableList<URL> amended =
+    ImmutableList<URI> urls = ImmutableList.of(URI.create("https://example.com/foo/bar"));
+    ImmutableList<URI> amended =
         munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
 
     // There's no guarantee about the ordering of the rewrites
-    assertThat(amended).contains(new URL("https://mycorp.com/bar/somewhere"));
-    assertThat(amended).contains(new URL("https://mycorp.com/bar/elsewhere"));
+    assertThat(amended).contains(URI.create("https://mycorp.com/bar/somewhere"));
+    assertThat(amended).contains(URI.create("https://mycorp.com/bar/elsewhere"));
+  }
+
+  /** Same as {@link #rewritesCanExpandToMoreThanOneUrl()} but spread across two config files. */
+  @Test
+  public void rewritesCanExpandToMoreThanOneUrlWithMultipleConfigs() throws Exception {
+    String config = "rewrite example.com/foo/(.*) mycorp.com/$1/somewhere\n";
+    String config2 = "rewrite example.com/foo/(.*) mycorp.com/$1/elsewhere\n";
+    UrlRewriter munger =
+        new UrlRewriter(
+            ImmutableList.of("/dev/null", "/dev/null"),
+            ImmutableList.of(new StringReader(config), new StringReader(config2)));
+
+    ImmutableList<URI> urls = ImmutableList.of(URI.create("https://example.com/foo/bar"));
+    ImmutableList<URI> amended =
+        munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
+
+    // There's no guarantee about the ordering of the rewrites
+    assertThat(amended).contains(URI.create("https://mycorp.com/bar/somewhere"));
+    assertThat(amended).contains(URI.create("https://mycorp.com/bar/elsewhere"));
   }
 
   @Test
   public void shouldBlockAllUrlsOtherThanSpecificOnes() throws Exception {
     String config = "" + "block *\n" + "allow example.com";
 
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> urls =
+    ImmutableList<URI> urls =
         ImmutableList.of(
-            new URL("https://foo.com"),
-            new URL("https://example.com/foo/bar"),
-            new URL("https://subdomain.example.com/qux"));
-    ImmutableList<URL> amended =
+            URI.create("https://foo.com"),
+            URI.create("https://example.com/foo/bar"),
+            URI.create("https://subdomain.example.com/qux"));
+    ImmutableList<URI> amended =
         munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
 
     assertThat(amended)
         .containsExactly(
-            new URL("https://example.com/foo/bar"), new URL("https://subdomain.example.com/qux"));
+            URI.create("https://example.com/foo/bar"),
+            URI.create("https://subdomain.example.com/qux"));
   }
 
   @Test
@@ -128,37 +169,38 @@ public class UrlRewriterTest {
             + "# But allow example.com\n"
             + "allow example.com";
 
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> urls = ImmutableList.of(new URL("https://foo.com"), new URL("https://example.com"));
-    ImmutableList<URL> amended =
+    ImmutableList<URI> urls =
+        ImmutableList.of(URI.create("https://foo.com"), URI.create("https://example.com"));
+    ImmutableList<URI> amended =
         munger.amend(urls).stream().map(url -> url.url()).collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://example.com"));
+    assertThat(amended).containsExactly(URI.create("https://example.com"));
   }
 
   @Test
   public void allowListAppliesToSubdomainsToo() throws Exception {
     String config = "" + "block *\n" + "allow example.com";
 
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    ImmutableList<URL> amended =
-        munger.amend(ImmutableList.of(new URL("https://subdomain.example.com"))).stream()
+    ImmutableList<URI> amended =
+        munger.amend(ImmutableList.of(URI.create("https://subdomain.example.com"))).stream()
             .map(url -> url.url())
             .collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://subdomain.example.com"));
+    assertThat(amended).containsExactly(URI.create("https://subdomain.example.com"));
   }
 
   @Test
   public void blockListAppliesToSubdomainsToo() throws Exception {
     String config = "block example.com";
 
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    ImmutableList<URL> amended =
-        munger.amend(ImmutableList.of(new URL("https://subdomain.example.com"))).stream()
+    ImmutableList<URI> amended =
+        munger.amend(ImmutableList.of(URI.create("https://subdomain.example.com"))).stream()
             .map(url -> url.url())
             .collect(toImmutableList());
 
@@ -169,32 +211,32 @@ public class UrlRewriterTest {
   public void emptyLinesAreFine() throws Exception {
     String config = "" + "\n" + "   \n" + "block *\n" + "\t  \n" + "allow example.com";
 
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    ImmutableList<URL> amended =
-        munger.amend(ImmutableList.of(new URL("https://subdomain.example.com"))).stream()
+    ImmutableList<URI> amended =
+        munger.amend(ImmutableList.of(URI.create("https://subdomain.example.com"))).stream()
             .map(url -> url.url())
             .collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://subdomain.example.com"));
+    assertThat(amended).containsExactly(URI.create("https://subdomain.example.com"));
   }
 
   @Test
   public void rewritingUrlsIsAppliedBeforeBlocking() throws Exception {
     String config = "" + "block bad.com\n" + "rewrite bad.com/foo/(.*) mycorp.com/$1";
 
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> amended =
+    ImmutableList<URI> amended =
         munger
             .amend(
                 ImmutableList.of(
-                    new URL("https://www.bad.com"), new URL("https://bad.com/foo/bar")))
+                    URI.create("https://www.bad.com"), URI.create("https://bad.com/foo/bar")))
             .stream()
             .map(url -> url.url())
             .collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://mycorp.com/bar"));
+    assertThat(amended).containsExactly(URI.create("https://mycorp.com/bar"));
   }
 
   @Test
@@ -202,28 +244,32 @@ public class UrlRewriterTest {
     String config =
         "" + "block *\n" + "allow mycorp.com\n" + "rewrite bad.com/foo/(.*) mycorp.com/$1";
 
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> amended =
+    ImmutableList<URI> amended =
         munger
             .amend(
                 ImmutableList.of(
-                    new URL("https://www.bad.com"), new URL("https://bad.com/foo/bar")))
+                    URI.create("https://www.bad.com"), URI.create("https://bad.com/foo/bar")))
             .stream()
             .map(url -> url.url())
             .collect(toImmutableList());
 
-    assertThat(amended).containsExactly(new URL("https://mycorp.com/bar"));
+    assertThat(amended).containsExactly(URI.create("https://mycorp.com/bar"));
   }
 
   @Test
   public void parseError() throws Exception {
     String config = "#comment\nhello";
+    assertThrows(
+        UrlRewriterParseException.class,
+        () -> testUrlRewriter("/some/file", new StringReader(config)));
     try {
       new UrlRewriterConfig("/some/file", new StringReader(config));
       fail();
     } catch (UrlRewriterParseException e) {
       assertThat(e.getLocation()).isEqualTo(Location.fromFileLineColumn("/some/file", 2, 0));
+      assertThat(e.getMessage()).contains("Unable to parse: hello");
     }
   }
 
@@ -264,22 +310,22 @@ public class UrlRewriterTest {
             + "rewrite bad.com/foo/(.*) http://mycorp.com/$1\n"
             + "rewrite bad.com/bar/(.*) https://othercorp.com/bar/$1\n";
 
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
-    List<URL> amended =
+    ImmutableList<URI> amended =
         munger
             .amend(
                 ImmutableList.of(
-                    new URL("https://www.bad.com"),
-                    new URL("https://bad.com/foo/bar"),
-                    new URL("http://bad.com/bar/xyz")))
+                    URI.create("https://www.bad.com"),
+                    URI.create("https://bad.com/foo/bar"),
+                    URI.create("http://bad.com/bar/xyz")))
             .stream()
             .map(url -> url.url())
             .collect(toImmutableList());
 
     assertThat(amended)
         .containsExactly(
-            new URL("http://mycorp.com/bar"), new URL("https://othercorp.com/bar/xyz"));
+            URI.create("http://mycorp.com/bar"), URI.create("https://othercorp.com/bar/xyz"));
   }
 
   @Test
@@ -308,16 +354,16 @@ public class UrlRewriterTest {
     // but no auth
     // headers added
 
-    UrlRewriter munger = new UrlRewriter(str -> {}, "/dev/null", new StringReader(config));
+    UrlRewriter munger = testUrlRewriter("/dev/null", new StringReader(config));
 
     ImmutableList<UrlRewriter.RewrittenURL> amended =
         munger.amend(
             ImmutableList.of(
-                new URL("https://my.example.com/foo/bar"),
-                new URL("https://my.example.com/from_netrc/bar"),
-                new URL("https://my.example.com/from_other_netrc_entry/bar"),
-                new URL("https://my.example.com/no_creds/bar"),
-                new URL("https://should-not-be-overridden.com/")));
+                URI.create("https://my.example.com/foo/bar"),
+                URI.create("https://my.example.com/from_netrc/bar"),
+                URI.create("https://my.example.com/from_other_netrc_entry/bar"),
+                URI.create("https://my.example.com/no_creds/bar"),
+                URI.create("https://should-not-be-overridden.com/")));
     Map<URI, Map<String, List<String>>> updatedAuthHeaders =
         munger.updateAuthHeaders(amended, ImmutableMap.of(), netrc);
 
@@ -340,13 +386,14 @@ public class UrlRewriterTest {
     assertThat(amended)
         .containsExactly(
             UrlRewriter.RewrittenURL.create(
-                new URL("https://user:password@mycorp.com/foo/bar"), true),
-            UrlRewriter.RewrittenURL.create(new URL("https://mycorp.com/from_netrc/bar"), true),
+                URI.create("https://user:password@mycorp.com/foo/bar"), true),
+            UrlRewriter.RewrittenURL.create(URI.create("https://mycorp.com/from_netrc/bar"), true),
             UrlRewriter.RewrittenURL.create(
-                new URL("https://myothercorp.com/from_netrc/bar"), true),
-            UrlRewriter.RewrittenURL.create(new URL("https://myopencorp.com/no_creds/bar"), true),
+                URI.create("https://myothercorp.com/from_netrc/bar"), true),
             UrlRewriter.RewrittenURL.create(
-                new URL("https://should-not-be-overridden.com/"), false));
+                URI.create("https://myopencorp.com/no_creds/bar"), true),
+            UrlRewriter.RewrittenURL.create(
+                URI.create("https://should-not-be-overridden.com/"), false));
   }
 
   @Test
@@ -440,6 +487,6 @@ public class UrlRewriterTest {
       Map<String, List<String>> requestMetadata, String username, String password) {
     assertThat(requestMetadata.keySet()).containsExactly("Authorization");
     assertThat(Iterables.getOnlyElement(requestMetadata.values()))
-        .containsExactly(BasicHttpAuthenticationEncoder.encode(username, password, UTF_8));
+        .containsExactly(BasicHttpAuthenticationEncoder.encode(username, password));
   }
 }
