@@ -43,9 +43,11 @@ import com.google.devtools.build.lib.actions.BuildConfigurationEvent;
 import com.google.devtools.build.lib.actions.RunningActionEvent;
 import com.google.devtools.build.lib.actions.ScanningActionEvent;
 import com.google.devtools.build.lib.actions.SchedulingActionEvent;
+import com.google.devtools.build.lib.actions.cache.OutputMetadataStore;
 import com.google.devtools.build.lib.actions.util.ActionsTestUtil;
 import com.google.devtools.build.lib.analysis.ConfiguredTarget;
 import com.google.devtools.build.lib.analysis.config.BuildConfigurationValue;
+import com.google.devtools.build.lib.analysis.platform.PlatformInfo;
 import com.google.devtools.build.lib.bazel.repository.downloader.DownloadProgressEvent;
 import com.google.devtools.build.lib.buildeventstream.AnnounceBuildEventTransportsEvent;
 import com.google.devtools.build.lib.buildeventstream.BuildEventStreamProtos;
@@ -59,15 +61,14 @@ import com.google.devtools.build.lib.buildtool.buildevent.TestFilteringCompleteE
 import com.google.devtools.build.lib.cmdline.Label;
 import com.google.devtools.build.lib.cmdline.LabelSyntaxException;
 import com.google.devtools.build.lib.cmdline.RepositoryMapping;
-import com.google.devtools.build.lib.cmdline.RepositoryName;
 import com.google.devtools.build.lib.events.ExtendedEventHandler.FetchProgress;
 import com.google.devtools.build.lib.exec.util.FakeActionInputFileCache;
 import com.google.devtools.build.lib.pkgcache.LoadingPhaseCompleteEvent;
 import com.google.devtools.build.lib.remote.Store;
 import com.google.devtools.build.lib.runtime.SkymeldUiStateTracker.BuildStatus;
 import com.google.devtools.build.lib.runtime.UiStateTracker.StrategyIds;
+import com.google.devtools.build.lib.skyframe.AnalysisProgressReceiver;
 import com.google.devtools.build.lib.skyframe.ConfigurationPhaseStartedEvent;
-import com.google.devtools.build.lib.skyframe.ConfiguredTargetProgressReceiver;
 import com.google.devtools.build.lib.skyframe.LoadingPhaseStartedEvent;
 import com.google.devtools.build.lib.skyframe.PackageProgressReceiver;
 import com.google.devtools.build.lib.skyframe.TopLevelStatusEvents.TestAnalyzedEvent;
@@ -83,7 +84,7 @@ import com.google.devtools.build.lib.view.test.TestStatus.BlazeTestStatus;
 import com.google.testing.junit.testparameterinjector.TestParameter;
 import com.google.testing.junit.testparameterinjector.TestParameterInjector;
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
 import java.time.Duration;
 import java.util.HashSet;
 import java.util.Set;
@@ -98,8 +99,6 @@ import org.mockito.AdditionalMatchers;
 public class UiStateTrackerTest extends FoundationTestCase {
 
   @TestParameter boolean isSkymeld;
-  static final RepositoryMapping MOCK_REPO_MAPPING =
-      RepositoryMapping.createAllowingFallback(ImmutableMap.of("main", RepositoryName.MAIN));
 
   private UiStateTracker getUiStateTracker(ManualClock clock) {
     if (isSkymeld) {
@@ -197,10 +196,10 @@ public class UiStateTrackerTest extends FoundationTestCase {
         ActionsTestUtil.createArtifact(ArtifactRoot.asSourceRoot(Root.fromPath(outputBase)), path);
 
     Action action = mock(Action.class);
-    when(action.getProgressMessage(eq(MOCK_REPO_MAPPING))).thenReturn(progressMessage);
+    when(action.getProgressMessage(eq(RepositoryMapping.EMPTY))).thenReturn(progressMessage);
     when(action.getPrimaryOutput()).thenReturn(artifact);
 
-    verify(action, never()).getProgressMessage(AdditionalMatchers.not(eq(MOCK_REPO_MAPPING)));
+    verify(action, never()).getProgressMessage(AdditionalMatchers.not(eq(RepositoryMapping.EMPTY)));
     verify(action, never()).getProgressMessage();
     return action;
   }
@@ -216,14 +215,15 @@ public class UiStateTrackerTest extends FoundationTestCase {
             BuildEventStreamProtos.BuildEventId.getDefaultInstance(),
             BuildEventStreamProtos.BuildEvent.getDefaultInstance()),
         /* isToolConfiguration= */ true,
-        /* executionPlatform= */ null,
+        /* executionPlatform= */ PlatformInfo.EMPTY_PLATFORM_INFO,
         /* aspectDescriptors= */ ImmutableList.of(),
         /* execProperties= */ ImmutableMap.of());
   }
 
   private void simulateExecutionPhase(UiStateTracker uiStateTracker) {
     uiStateTracker.loadingComplete(
-        new LoadingPhaseCompleteEvent(ImmutableSet.of(), ImmutableSet.of(), MOCK_REPO_MAPPING));
+        new LoadingPhaseCompleteEvent(
+            ImmutableSet.of(), ImmutableSet.of(), RepositoryMapping.EMPTY));
     if (this.isSkymeld) {
       // SkymeldUiStateTracker needs to be in the configuration phase before the execution phase.
       ((SkymeldUiStateTracker) uiStateTracker)
@@ -264,7 +264,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
 
     // When it is just loading packages.
     LoggingTerminalWriter terminalWriterLoading =
-        new LoggingTerminalWriter(/*discardHighlight=*/ true);
+        new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriterLoading);
     String loadingOutput = terminalWriterLoading.getTranscript();
 
@@ -274,27 +274,25 @@ public class UiStateTrackerTest extends FoundationTestCase {
 
     // When it is configuring targets.
     stateTracker.loadingComplete(
-        new LoadingPhaseCompleteEvent(ImmutableSet.of(), ImmutableSet.of(), MOCK_REPO_MAPPING));
+        new LoadingPhaseCompleteEvent(
+            ImmutableSet.of(), ImmutableSet.of(), RepositoryMapping.EMPTY));
     String additionalMessage = "5 targets";
     stateTracker.additionalMessage = additionalMessage;
-    String configuredTargetProgressString = "5 targets configured";
-    ConfiguredTargetProgressReceiver configuredTargetProgressReceiver =
-        mock(ConfiguredTargetProgressReceiver.class);
-    when(configuredTargetProgressReceiver.getProgressString())
-        .thenReturn(configuredTargetProgressString);
-    stateTracker.configurationStarted(
-        new ConfigurationPhaseStartedEvent(configuredTargetProgressReceiver));
+    String analysisProgressString = "5 targets and 0 aspects configured";
+    AnalysisProgressReceiver analysisProgressReceiver = mock(AnalysisProgressReceiver.class);
+    when(analysisProgressReceiver.getProgressString()).thenReturn(analysisProgressString);
+    stateTracker.configurationStarted(new ConfigurationPhaseStartedEvent(analysisProgressReceiver));
 
     LoggingTerminalWriter terminalWriterLoadingConfiguration =
-        new LoggingTerminalWriter(/*discardHighlight=*/ true);
+        new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriterLoadingConfiguration);
     String loadingConfigurationOutput = terminalWriterLoadingConfiguration.getTranscript();
     assertThat(loadingConfigurationOutput).contains("Analyzing");
     assertThat(loadingConfigurationOutput).contains(additionalMessage);
     assertThat(loadingConfigurationOutput).contains(loadingState);
     assertThat(loadingConfigurationOutput).contains(loadingActivity);
-    // It should contain the configured target progress string along with the loading information.
-    assertThat(loadingConfigurationOutput).contains(configuredTargetProgressString);
+    // It should contain the analysis progress string along with the loading information.
+    assertThat(loadingConfigurationOutput).contains(analysisProgressString);
   }
 
   @Test
@@ -311,18 +309,17 @@ public class UiStateTrackerTest extends FoundationTestCase {
     simulateExecutionPhase(stateTracker);
     stateTracker.actionStarted(new ActionStartedEvent(mockAction(message, "bar/foo"), 123456789));
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
-    assertWithMessage("Action message '" + message + "' should be present in output: " + output)
+    assertWithMessage("Action message '%s' should be present in output: %s", message, output)
         .that(output.contains(message))
         .isTrue();
 
     terminalWriter = new LoggingTerminalWriter();
-    stateTracker.writeProgressBar(terminalWriter, /* shortVersion=*/ true);
+    stateTracker.writeProgressBar(terminalWriter, /* shortVersion= */ true);
     output = terminalWriter.getTranscript();
-    assertWithMessage(
-            "Action message '" + message + "' should be present in short output: " + output)
+    assertWithMessage("Action message '%s' should be present in short output: %s", message, output)
         .that(output.contains(message))
         .isTrue();
   }
@@ -348,35 +345,34 @@ public class UiStateTrackerTest extends FoundationTestCase {
     ActionLookupData actionLookupData = ActionLookupData.create(mock(ActionLookupKey.class), 1);
     stateTracker.actionCompletion(
         new ActionCompletionEvent(
-            20, clock.nanoTime(), fastAction, new FakeActionInputFileCache(), actionLookupData));
+            20,
+            clock.nanoTime(),
+            fastAction,
+            new FakeActionInputFileCache(),
+            mock(OutputMetadataStore.class),
+            actionLookupData));
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
     assertWithMessage(
-            "Completed action '" + messageFast + "' should not be present in output: " + output)
+            "Completed action '%s' should not be present in output: %s", messageFast, output)
         .that(output.contains(messageFast))
         .isFalse();
     assertWithMessage(
-            "Only running action '" + messageSlow + "' should be present in output: " + output)
+            "Only running action '%s' should be present in output: %s", messageSlow, output)
         .that(output.contains(messageSlow))
         .isTrue();
 
     terminalWriter = new LoggingTerminalWriter();
-    stateTracker.writeProgressBar(terminalWriter, /* shortVersion=*/ true);
+    stateTracker.writeProgressBar(terminalWriter, /* shortVersion= */ true);
     output = terminalWriter.getTranscript();
     assertWithMessage(
-            "Completed action '"
-                + messageFast
-                + "' should not be present in short output: "
-                + output)
+            "Completed action '%s' should not be present in short output: %s", messageFast, output)
         .that(output.contains(messageFast))
         .isFalse();
     assertWithMessage(
-            "Only running action '"
-                + messageSlow
-                + "' should be present in short output: "
-                + output)
+            "Only running action '%s' should be present in short output: %s", messageSlow, output)
         .that(output.contains(messageSlow))
         .isTrue();
   }
@@ -401,22 +397,19 @@ public class UiStateTrackerTest extends FoundationTestCase {
               mockAction("Other action " + i, "some/other/actions/number" + i), 123456790 + i));
     }
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
     assertWithMessage(
-            "Longest running action '" + messageOld + "' should be visible in output: " + output)
+            "Longest running action '%s' should be visible in output: %s", messageOld, output)
         .that(output.contains(messageOld))
         .isTrue();
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
-    stateTracker.writeProgressBar(terminalWriter, /* shortVersion=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter, /* shortVersion= */ true);
     output = terminalWriter.getTranscript();
     assertWithMessage(
-            "Longest running action '"
-                + messageOld
-                + "' should be visible in short output: "
-                + output)
+            "Longest running action '%s' should be visible in short output: %s", messageOld, output)
         .that(output.contains(messageOld))
         .isTrue();
   }
@@ -441,21 +434,22 @@ public class UiStateTrackerTest extends FoundationTestCase {
     // For various sample sizes verify the progress bar
     for (int i = 1; i < 11; i++) {
       stateTracker.setProgressSampleSize(i);
-      LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+      LoggingTerminalWriter terminalWriter =
+          new LoggingTerminalWriter(/* discardHighlight= */ true);
       stateTracker.writeProgressBar(terminalWriter);
       String output = terminalWriter.getTranscript();
-      assertWithMessage("Action " + (i - 1) + " should still be shown in the output: '" + output)
+      assertWithMessage("Action %s should still be shown in the output: '%s", (i - 1), output)
           .that(output.contains("A" + (i - 1) + "."))
           .isTrue();
-      assertWithMessage("Action " + i + " should not be shown in the output: " + output)
+      assertWithMessage("Action %s should not be shown in the output: %s", i, output)
           .that(output.contains("A" + i + "."))
           .isFalse();
       if (i < 10) {
-        assertWithMessage("Ellipsis symbol should be shown in output: " + output)
+        assertWithMessage("Ellipsis symbol should be shown in output: %s", output)
             .that(output.contains("..."))
             .isTrue();
       } else {
-        assertWithMessage("Ellipsis symbol should not be shown in output: " + output)
+        assertWithMessage("Ellipsis symbol should not be shown in output: %s", output)
             .that(output.contains("..."))
             .isFalse();
       }
@@ -481,20 +475,20 @@ public class UiStateTrackerTest extends FoundationTestCase {
         new ActionStartedEvent(mockAction("Second action", "bar"), clock.nanoTime()));
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(20));
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
-    assertWithMessage("Runtime of first action should be visible in output: " + output)
+    assertWithMessage("Runtime of first action should be visible in output: %s", output)
         .that(output.contains("27s"))
         .isTrue();
-    assertWithMessage("Runtime of second action should be visible in output: " + output)
+    assertWithMessage("Runtime of second action should be visible in output: %s", output)
         .that(output.contains("20s"))
         .isTrue();
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
-    stateTracker.writeProgressBar(terminalWriter, /* shortVersion=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter, /* shortVersion= */ true);
     output = terminalWriter.getTranscript();
-    assertWithMessage("Runtime of first action should be visible in short output: " + output)
+    assertWithMessage("Runtime of first action should be visible in short output: %s", output)
         .that(output.contains("27s"))
         .isTrue();
   }
@@ -546,17 +540,17 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.testFilteringComplete(filteringComplete);
     stateTracker.testSummary(testSummary);
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
-    assertWithMessage("Test count should be visible in output: " + output)
+    assertWithMessage("Test count should be visible in output: %s", output)
         .that(output.contains(" 1 / 2 tests"))
         .isTrue();
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
-    stateTracker.writeProgressBar(terminalWriter, /* shortVersion=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter, /* shortVersion= */ true);
     output = terminalWriter.getTranscript();
-    assertWithMessage("Test count should be visible in short output: " + output)
+    assertWithMessage("Test count should be visible in short output: %s", output)
         .that(output.contains(" 1 / 2 tests"))
         .isTrue();
   }
@@ -588,7 +582,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
 
     String expected = LoggingTerminalWriter.OK + labelA;
     assertWithMessage(
-            "Sequence '" + expected + "' should be present in colored progress bar: " + output)
+            "Sequence '%s' should be present in colored progress bar: %s", expected, output)
         .that(output.contains(expected))
         .isTrue();
   }
@@ -621,7 +615,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
 
     String expected = LoggingTerminalWriter.FAIL + labelA;
     assertWithMessage(
-            "Sequence '" + expected + "' should be present in colored progress bar: " + output)
+            "Sequence '%s' should be present in colored progress bar: %s", expected, output)
         .that(output.contains(expected))
         .isTrue();
   }
@@ -632,7 +626,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
     // the path implicit in it, that can also be extracted from the label. In particular,
     // the parts
     ManualClock clock = new ManualClock();
-    UiStateTracker stateTracker = getUiStateTracker(clock, /*targetWidth=*/ 70);
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 70);
     // Mimic being at the execution phase.
     simulateExecutionPhase(stateTracker);
     Action action =
@@ -653,7 +647,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
                 BuildEventStreamProtos.BuildEventId.getDefaultInstance(),
                 BuildEventStreamProtos.BuildEvent.getDefaultInstance()),
             /* isToolConfiguration= */ false,
-            /* executionPlatform= */ null,
+            /* executionPlatform= */ PlatformInfo.EMPTY_PLATFORM_INFO,
             /* aspectDescriptors= */ ImmutableList.of(),
             /* execProperties= */ ImmutableMap.of());
     when(action.getOwner()).thenReturn(owner);
@@ -662,15 +656,15 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.actionStarted(new ActionStartedEvent(action, clock.nanoTime()));
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(5));
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
 
-    assertWithMessage("Progress bar should contain 'Building ', but was:\n" + output)
+    assertWithMessage("Progress bar should contain 'Building ', but was:\n%s", output)
         .that(output.contains("Building "))
         .isTrue();
     assertWithMessage(
-            "Progress bar should contain 'foo.jar (42 source files)', but was:\n" + output)
+            "Progress bar should contain 'foo.jar (42 source files)', but was:\n%s", output)
         .that(output.contains("foo.jar (42 source files)"))
         .isTrue();
   }
@@ -696,11 +690,11 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.actionStarted(new ActionStartedEvent(action, clock.nanoTime()));
     stateTracker.runningAction(new RunningActionEvent(action, strategy));
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
 
-    assertWithMessage("Output should mention strategy '" + strategy + "', but was: " + output)
+    assertWithMessage("Output should mention strategy '%s', but was: %s", strategy, output)
         .that(output.contains(strategy))
         .isTrue();
   }
@@ -727,7 +721,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.actionStarted(new ActionStartedEvent(action, clock.nanoTime()));
     stateTracker.actionProgress(
         ActionProgressEvent.create(action, "action-id", "action progress", false));
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
 
     // act
     stateTracker.writeProgressBar(terminalWriter);
@@ -748,7 +742,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.actionStarted(new ActionStartedEvent(action, clock.nanoTime()));
     stateTracker.actionProgress(
         ActionProgressEvent.create(action, "action-id", "action progress", false));
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
 
     // act
     stateTracker.writeProgressBar(terminalWriter);
@@ -770,7 +764,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.actionStarted(new ActionStartedEvent(action, clock.nanoTime()));
     stateTracker.actionProgress(
         ActionProgressEvent.create(action, "action-id", "action progress", false));
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
 
     // act
     stateTracker.writeProgressBar(terminalWriter);
@@ -785,7 +779,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
     // arrange
     ManualClock clock = new ManualClock();
     Action action = createDummyAction("Some random action");
-    UiStateTracker stateTracker = getUiStateTracker(clock, /*targetWidth=*/ 70);
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 70);
     // Mimic being at the execution phase.
     simulateExecutionPhase(stateTracker);
     stateTracker.actionStarted(new ActionStartedEvent(action, clock.nanoTime()));
@@ -793,7 +787,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
         ActionProgressEvent.create(action, "action-id1", "action progress 1", false));
     stateTracker.actionProgress(
         ActionProgressEvent.create(action, "action-id2", "action progress 2", false));
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
 
     // act
     stateTracker.writeProgressBar(terminalWriter);
@@ -825,17 +819,13 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.runningAction(new RunningActionEvent(action, strategy1));
     stateTracker.runningAction(new RunningActionEvent(action, strategy2));
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
 
     assertWithMessage(
-            "Output should mention strategies '"
-                + strategy1
-                + "' and '"
-                + strategy2
-                + "', but was: "
-                + output)
+            "Output should mention strategies '%s' and '%s', but was: %s",
+            strategy1, strategy2, output)
         .that(output.contains(strategy1 + ", " + strategy2))
         .isTrue();
   }
@@ -849,7 +839,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
     UiStateTracker stateTracker = getUiStateTracker(clock);
     // Mimic being at the execution phase.
     simulateExecutionPhase(stateTracker);
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
 
     Path path1 = outputBase.getRelative(PathFragment.create(primaryOutput1));
     Artifact artifact1 =
@@ -894,7 +884,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
     // keep the line limit, and show the local part of the running actions and
     // the passed test.
     ManualClock clock = new ManualClock();
-    UiStateTracker stateTracker = getUiStateTracker(clock, /*targetWidth=*/ 70);
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 70);
     // Mimic being at the execution phase.
     simulateExecutionPhase(stateTracker);
 
@@ -934,26 +924,26 @@ public class UiStateTrackerTest extends FoundationTestCase {
       stateTracker.testSummary(testSummary);
     }
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
 
     assertWithMessage(
-            "Only lines with at most 70 chars should be present in the output:\n" + output)
+            "Only lines with at most 70 chars should be present in the output:\n%s", output)
         .that(longestLine(output) <= 70)
         .isTrue();
     if (actions >= 1) {
-      assertWithMessage("Running action 'foobuild' should be mentioned in output:\n" + output)
+      assertWithMessage("Running action 'foobuild' should be mentioned in output:\n%s", output)
           .that(output.contains("foobuild"))
           .isTrue();
     }
     if (actions >= 2) {
-      assertWithMessage("Running action 'bazbuild' should be mentioned in output:\n" + output)
+      assertWithMessage("Running action 'bazbuild' should be mentioned in output:\n%s", output)
           .that(output.contains("bazbuild"))
           .isTrue();
     }
     if (withTest) {
-      assertWithMessage("Passed test ':bartest' should be mentioned in output:\n" + output)
+      assertWithMessage("Passed test ':bartest' should be mentioned in output:\n%s", output)
           .that(output.contains(":bartest"))
           .isTrue();
     }
@@ -991,10 +981,10 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.actionStarted(new ActionStartedEvent(actionFoo, 123456700));
     stateTracker.scanningAction(new ScanningActionEvent(actionFoo));
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
-    assertWithMessage("Action foo being scanned should be visible in output:\n" + output)
+    assertWithMessage("Action foo being scanned should be visible in output:\n%s", output)
         .that(output.contains("sca") || output.contains("Sca"))
         .isTrue();
 
@@ -1002,19 +992,19 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.actionStarted(new ActionStartedEvent(actionBar, 123456701));
     stateTracker.schedulingAction(new SchedulingActionEvent(actionBar, "bar-sandbox"));
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
-    assertWithMessage("Action bar being scheduled should be visible in output:\n" + output)
+    assertWithMessage("Action bar being scheduled should be visible in output:\n%s", output)
         .that(output.contains("sch") || output.contains("Sch"))
         .isTrue();
-    assertWithMessage("Action foo being scanned should still be visible in output:\n" + output)
+    assertWithMessage("Action foo being scanned should still be visible in output:\n%s", output)
         .that(output.contains("sca") || output.contains("Sca"))
         .isTrue();
-    assertWithMessage("Indication that no actions are running is missing in output:\n" + output)
+    assertWithMessage("Indication that no actions are running is missing in output:\n%s", output)
         .that(output.contains("0 running"))
         .isTrue();
-    assertWithMessage("Total number of actions expected  in output:\n" + output)
+    assertWithMessage("Total number of actions expected  in output:\n%s", output)
         .that(output.contains("2 actions"))
         .isTrue();
 
@@ -1022,22 +1012,22 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.runningAction(new RunningActionEvent(actionFoo, "xyz-sandbox"));
     stateTracker.writeProgressBar(terminalWriter);
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
-    assertWithMessage("Action foo's xyz-sandbox strategy should be shown in output:\n" + output)
+    assertWithMessage("Action foo's xyz-sandbox strategy should be shown in output:\n%s", output)
         .that(output.contains("xyz-sandbox"))
         .isTrue();
-    assertWithMessage("Action foo should no longer be analyzed in output:\n" + output)
+    assertWithMessage("Action foo should no longer be analyzed in output:\n%s", output)
         .that(output.contains("ana") || output.contains("Ana"))
         .isFalse();
-    assertWithMessage("Action bar being scheduled should still be visible in output:\n" + output)
+    assertWithMessage("Action bar being scheduled should still be visible in output:\n%s", output)
         .that(output.contains("sch") || output.contains("Sch"))
         .isTrue();
-    assertWithMessage("Indication that one action is running is missing in output:\n" + output)
+    assertWithMessage("Indication that one action is running is missing in output:\n%s", output)
         .that(output.contains("1 running"))
         .isTrue();
-    assertWithMessage("Total number of actions expected  in output:\n" + output)
+    assertWithMessage("Total number of actions expected  in output:\n%s", output)
         .that(output.contains("2 actions"))
         .isTrue();
   }
@@ -1070,35 +1060,35 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.schedulingAction(new SchedulingActionEvent(actionBar, "bar-sandbox"));
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(21));
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
-    assertWithMessage("Runtime of first action should be visible in output: " + output)
+    assertWithMessage("Runtime of first action should be visible in output: %s", output)
         .that(output.contains("28s"))
         .isTrue();
-    assertWithMessage("Scheduling time of second action should be visible in output: " + output)
+    assertWithMessage("Scheduling time of second action should be visible in output: %s", output)
         .that(output.contains("21s"))
         .isTrue();
 
     stateTracker.runningAction(new RunningActionEvent(actionBar, "bar-sandbox"));
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
-    assertWithMessage("Runtime of first action should still be visible in output: " + output)
+    assertWithMessage("Runtime of first action should still be visible in output: %s", output)
         .that(output.contains("28s"))
         .isTrue();
-    assertWithMessage("Time of second action should no longer be visible in output: " + output)
+    assertWithMessage("Time of second action should no longer be visible in output: %s", output)
         .that(output.contains("21s"))
         .isFalse();
 
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(30));
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
-    assertWithMessage("New runtime of first action should be visible in output: " + output)
+    assertWithMessage("New runtime of first action should be visible in output: %s", output)
         .that(output.contains("58s"))
         .isTrue();
-    assertWithMessage("Runtime of second action should be visible in output: " + output)
+    assertWithMessage("Runtime of second action should be visible in output: %s", output)
         .that(output.contains("30s"))
         .isTrue();
   }
@@ -1122,7 +1112,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
 
     // Here we don't expect any particular output, just some description; in particular, we do
     // not expect the state tracker to hit an internal error.
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
     assertWithMessage("Expected at least some status bar").that(output).isNotEmpty();
@@ -1130,10 +1120,10 @@ public class UiStateTrackerTest extends FoundationTestCase {
     // Action actually started
     stateTracker.actionStarted(new ActionStartedEvent(actionFoo, clock.nanoTime()));
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     output = terminalWriter.getTranscript();
-    assertWithMessage("Even a strategy announced early should be shown in output:\n" + output)
+    assertWithMessage("Even a strategy announced early should be shown in output:\n%s", output)
         .that(output.contains("foo-sandbox"))
         .isTrue();
   }
@@ -1162,13 +1152,14 @@ public class UiStateTrackerTest extends FoundationTestCase {
       stateTracker.actionStarted(new ActionStartedEvent(action, 123457000 + i));
       stateTracker.runningAction(new RunningActionEvent(action, "xyz-sandbox"));
 
-      LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+      LoggingTerminalWriter terminalWriter =
+          new LoggingTerminalWriter(/* discardHighlight= */ true);
       stateTracker.writeProgressBar(terminalWriter);
       String output = terminalWriter.getTranscript();
-      assertWithMessage("Action quickstart" + i + " should be visible in output:\n" + output)
+      assertWithMessage("Action quickstart%s should be visible in output:\n%s", i, output)
           .that(output.contains("quickstart" + i))
           .isTrue();
-      assertWithMessage("Number of running actions should be indicated in output:\n" + output)
+      assertWithMessage("Number of running actions should be indicated in output:\n%s", output)
           .that(output.contains((i + 1) + " running"))
           .isTrue();
     }
@@ -1180,7 +1171,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
     // is still shown.
     ManualClock clock = new ManualClock();
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(1234));
-    UiStateTracker stateTracker = getUiStateTracker(clock, /*targetWidth=*/ 80);
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 80);
     stateTracker.setProgressSampleSize(4);
     // Mimic being at the execution phase.
     simulateExecutionPhase(stateTracker);
@@ -1199,7 +1190,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
                 BuildEventStreamProtos.BuildEventId.getDefaultInstance(),
                 BuildEventStreamProtos.BuildEvent.getDefaultInstance()),
             /* isToolConfiguration= */ false,
-            /* executionPlatform= */ null,
+            /* executionPlatform= */ PlatformInfo.EMPTY_PLATFORM_INFO,
             /* aspectDescriptors= */ ImmutableList.of(),
             /* execProperties= */ ImmutableMap.of());
 
@@ -1217,7 +1208,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
                 BuildEventStreamProtos.BuildEventId.getDefaultInstance(),
                 BuildEventStreamProtos.BuildEvent.getDefaultInstance()),
             /* isToolConfiguration= */ false,
-            /* executionPlatform= */ null,
+            /* executionPlatform= */ PlatformInfo.EMPTY_PLATFORM_INFO,
             /* aspectDescriptors= */ ImmutableList.of(),
             /* execProperties= */ ImmutableMap.of());
 
@@ -1235,7 +1226,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
                 BuildEventStreamProtos.BuildEventId.getDefaultInstance(),
                 BuildEventStreamProtos.BuildEvent.getDefaultInstance()),
             /* isToolConfiguration= */ false,
-            /* executionPlatform= */ null,
+            /* executionPlatform= */ PlatformInfo.EMPTY_PLATFORM_INFO,
             /* aspectDescriptors= */ ImmutableList.of(),
             /* execProperties= */ ImmutableMap.of());
 
@@ -1271,17 +1262,17 @@ public class UiStateTrackerTest extends FoundationTestCase {
     }
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(1));
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
 
-    assertWithMessage("Progress bar should contain ':footest', but was:\n" + output)
+    assertWithMessage("Progress bar should contain ':footest', but was:\n%s", output)
         .that(output.contains(":footest"))
         .isTrue();
-    assertWithMessage("Progress bar should contain ':bartest', but was:\n" + output)
+    assertWithMessage("Progress bar should contain ':bartest', but was:\n%s", output)
         .that(output.contains(":bartest"))
         .isTrue();
-    assertWithMessage("Progress bar should contain 'Other action', but was:\n" + output)
+    assertWithMessage("Progress bar should contain 'Other action', but was:\n%s", output)
         .that(output.contains("Other action"))
         .isTrue();
     assertThat(output).doesNotContain("Testing //baz:baztest");
@@ -1303,7 +1294,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
     clock.advance(Duration.ofSeconds(1234));
     UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 80);
 
-    URL url = new URL("http://example.org/first/dep");
+    URI url = URI.create("http://example.org/first/dep");
 
     stateTracker.buildStarted();
     stateTracker.downloadProgress(new DownloadProgressEvent(url));
@@ -1345,7 +1336,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
     clock.advance(Duration.ofSeconds(1234));
     UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 80);
 
-    URL url = new URL("http://example.org/first/dep");
+    URI url = URI.create("http://example.org/first/dep");
 
     stateTracker.mainRepoMappingComputationStarted();
     stateTracker.downloadProgress(new DownloadProgressEvent(url));
@@ -1388,7 +1379,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
     ManualClock clock = new ManualClock();
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(1234));
     UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 60);
-    URL url = new URL("http://example.org/some/really/very/very/long/path/filename.tar.gz");
+    URI url = URI.create("http://example.org/some/really/very/very/long/path/filename.tar.gz");
 
     stateTracker.buildStarted();
     stateTracker.downloadProgress(new DownloadProgressEvent(url));
@@ -1396,25 +1387,25 @@ public class UiStateTrackerTest extends FoundationTestCase {
     for (int i = 0; i < 10; i++) {
       stateTracker.downloadProgress(
           new DownloadProgressEvent(
-              new URL(
+              URI.create(
                   "http://otherhost.example/another/also/length/path/to/another/download"
                       + i
                       + ".zip")));
       clock.advanceMillis(TimeUnit.SECONDS.toMillis(1));
     }
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
 
     assertWithMessage(
-            "Only lines with at most 60 chars should be present in the output:\n" + output)
+            "Only lines with at most 60 chars should be present in the output:\n%s", output)
         .that(longestLine(output) <= 60)
         .isTrue();
-    assertWithMessage("Output still should contain the filename, but was:\n" + output)
+    assertWithMessage("Output still should contain the filename, but was:\n%s", output)
         .that(output.contains("filename.tar.gz"))
         .isTrue();
-    assertWithMessage("Output still should contain the host name, but was:\n" + output)
+    assertWithMessage("Output still should contain the host name, but was:\n%s", output)
         .that(output.contains("example.org"))
         .isTrue();
   }
@@ -1434,7 +1425,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
     clock.advanceMillis(TimeUnit.SECONDS.toMillis(1));
     buildResult.setStopTime(clock.currentTimeMillis());
 
-    UiStateTracker stateTracker = getUiStateTracker(clock, /*targetWidth=*/ 80);
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 80);
     stateTracker.buildStarted();
     stateTracker.buildEventTransportsAnnounced(
         new AnnounceBuildEventTransportsEvent(ImmutableList.of(transport1, transport2)));
@@ -1494,7 +1485,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
     BuildResult buildResult = new BuildResult(clock.currentTimeMillis());
     buildResult.setDetailedExitCode(DetailedExitCode.success());
     LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(true);
-    UiStateTracker stateTracker = getUiStateTracker(clock, /*targetWidth=*/ 60);
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 60);
     stateTracker.buildStarted();
     stateTracker.buildEventTransportsAnnounced(
         new AnnounceBuildEventTransportsEvent(ImmutableList.of(transport1, transport2)));
@@ -1528,7 +1519,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
   @Test
   public void testTotalFetchesReported() throws IOException {
     ManualClock clock = new ManualClock();
-    UiStateTracker stateTracker = getUiStateTracker(clock, /*targetWidth=*/ 80);
+    UiStateTracker stateTracker = getUiStateTracker(clock, /* targetWidth= */ 80);
 
     stateTracker.buildStarted();
     for (int i = 0; i < 30; i++) {
@@ -1577,7 +1568,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.actionUploadStarted(
         ActionUploadStartedEvent.create(
             action, Store.AC, Digest.newBuilder().setHash("foo").setSizeBytes(1).build()));
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
 
     stateTracker.writeProgressBar(terminalWriter);
 
@@ -1600,7 +1591,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
     buildResult.setStopTime(clock.currentTimeMillis());
     var unused = stateTracker.buildComplete(new BuildCompleteEvent(buildResult));
     clock.advanceMillis(Duration.ofSeconds(2).toMillis());
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
 
     stateTracker.writeProgressBar(terminalWriter);
 
@@ -1625,7 +1616,7 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.actionUploadStarted(ActionUploadStartedEvent.create(action, Store.CAS, c));
     stateTracker.actionUploadFinished(ActionUploadFinishedEvent.create(action, Store.AC, a));
     clock.advanceMillis(Duration.ofSeconds(2).toMillis());
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
 
     stateTracker.writeProgressBar(terminalWriter);
 
@@ -1645,13 +1636,13 @@ public class UiStateTrackerTest extends FoundationTestCase {
     when(targetA.getLabel()).thenReturn(labelA);
     TestAnalyzedEvent testAnalyzedEventA =
         TestAnalyzedEvent.create(
-            targetA, mock(BuildConfigurationValue.class), /*isSkipped=*/ false);
+            targetA, mock(BuildConfigurationValue.class), /* isSkipped= */ false);
     Label labelB = Label.parseCanonical("//foo:B");
     ConfiguredTarget targetB = mock(ConfiguredTarget.class);
     when(targetB.getLabel()).thenReturn(labelB);
     TestAnalyzedEvent testAnalyzedEventB =
         TestAnalyzedEvent.create(
-            targetB, mock(BuildConfigurationValue.class), /*isSkipped=*/ false);
+            targetB, mock(BuildConfigurationValue.class), /* isSkipped= */ false);
     // Only targetA has finished running.
     TestSummary testSummary = mock(TestSummary.class);
     when(testSummary.getTarget()).thenReturn(targetA);
@@ -1661,13 +1652,13 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.singleTestAnalyzed(testAnalyzedEventB);
     stateTracker.testSummary(testSummary);
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
     assertThat(output).contains(" 1 / 2 tests");
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
-    stateTracker.writeProgressBar(terminalWriter, /* shortVersion=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter, /* shortVersion= */ true);
     output = terminalWriter.getTranscript();
     assertThat(output).contains(" 1 / 2 tests");
   }
@@ -1684,10 +1675,10 @@ public class UiStateTrackerTest extends FoundationTestCase {
     when(targetA.getLabel()).thenReturn(labelA);
     TestAnalyzedEvent testAnalyzedEventA =
         TestAnalyzedEvent.create(
-            targetA, mock(BuildConfigurationValue.class), /*isSkipped=*/ false);
+            targetA, mock(BuildConfigurationValue.class), /* isSkipped= */ false);
     TestAnalyzedEvent testAnalyzedEventARepeated =
         TestAnalyzedEvent.create(
-            targetA, mock(BuildConfigurationValue.class), /*isSkipped=*/ false);
+            targetA, mock(BuildConfigurationValue.class), /* isSkipped= */ false);
     // Only targetA has finished running.
     TestSummary testSummary = mock(TestSummary.class);
     when(testSummary.getTarget()).thenReturn(targetA);
@@ -1697,14 +1688,40 @@ public class UiStateTrackerTest extends FoundationTestCase {
     stateTracker.singleTestAnalyzed(testAnalyzedEventARepeated);
     stateTracker.testSummary(testSummary);
 
-    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
     stateTracker.writeProgressBar(terminalWriter);
     String output = terminalWriter.getTranscript();
     assertThat(output).contains(" 1 / 1 tests");
 
-    terminalWriter = new LoggingTerminalWriter(/*discardHighlight=*/ true);
-    stateTracker.writeProgressBar(terminalWriter, /* shortVersion=*/ true);
+    terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter, /* shortVersion= */ true);
     output = terminalWriter.getTranscript();
     assertThat(output).contains(" 1 / 1 tests");
+  }
+
+  @Test
+  public void testGetOldestAction_prioritizesRunningOverScheduled() throws Exception {
+    ManualClock clock = new ManualClock();
+    UiStateTracker stateTracker = getUiStateTracker(clock);
+    simulateExecutionPhase(stateTracker);
+
+    Action scheduledAction = mockAction("Scheduled action", "scheduled/action");
+    when(scheduledAction.getOwner()).thenReturn(dummyActionOwner());
+    stateTracker.actionStarted(new ActionStartedEvent(scheduledAction, clock.nanoTime()));
+    stateTracker.schedulingAction(new SchedulingActionEvent(scheduledAction, "some-strategy"));
+
+    clock.advanceMillis(1000);
+    Action runningAction = mockAction("Running action", "running/action");
+    when(runningAction.getOwner()).thenReturn(dummyActionOwner());
+    stateTracker.actionStarted(new ActionStartedEvent(runningAction, clock.nanoTime()));
+    stateTracker.runningAction(new RunningActionEvent(runningAction, "some-strategy"));
+
+    LoggingTerminalWriter terminalWriter = new LoggingTerminalWriter(/* discardHighlight= */ true);
+    stateTracker.writeProgressBar(terminalWriter, /* shortVersion= */ true);
+    String output = terminalWriter.getTranscript();
+
+    assertThat(output).contains("Running action");
+    assertThat(output).contains("(2 actions, 1 running)");
+    assertThat(output).doesNotContain("Scheduled action");
   }
 }
